--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 /release \1~
 
--\sark ~is now an extra killer with a \nunique moveset, instead of replacing \x ~(\sonic.exe~)
+-\sark ~is now an extra killer with a 
+unique moveset, instead of replacing \x ~(\sonic.exe~)
 -demonized are now \sark's ~variants
 -amy and cream received changes or additions to their movesets
 -\sark's temple ~and #sark's hill ~are added as 21st and 22nd maps
