--- a/changelog.txt
+++ b/changelog.txt
@@ -8,3 +8,13 @@ to their movesets
 -\sark's temple ~and #sark's hill ~are added 
 as 21st and 22nd maps
 -additional pets and icons in the shop
+
+
+
+
+
+
+
+
+
+please dont compare this \sark ~to nu projects sark
