--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,4 @@ as 21st and 22nd maps
 
 
 
-
-
-please dont compare this \sark ~to nu projects sark
+please dont compare this \sark ~to nu projects \sark~
